--- a/src/app/main/contract-folder/current-folder/upload-contract-file/upload-contract-file.component.scss
+++ b/src/app/main/contract-folder/current-folder/upload-contract-file/upload-contract-file.component.scss
@@ -281,4 +281,10 @@
   .invalid{
     color: red;
   }
+
+  .name-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
   
