[Update - GlobalStyles] Hiển thị text, khoảng trắng theo đúng data api trả về

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,7 @@
 @import '~material-icons/iconfont/material-icons.css';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans-serif !important; font-size: 13px !important;}
+body { margin: 0; font-family: font_lexend_deca , Roboto, "Helvetica Neue", sans-serif !important; font-size: 13px !important; white-space: pre;}
 
 @font-face {
   font-family: font_lexend_deca;
