[Update - ReportsCSS] Set white-space cho từng bảng thay vì set global

--- a/src/app/main/report/report-detail/report-detail.component.scss
+++ b/src/app/main/report/report-detail/report-detail.component.scss
@@ -205,3 +205,7 @@ input[type="checkbox"]:checked + label:before {
   width: 250px;
   word-break:break-word
 }
+
+#table td {
+  white-space: pre-wrap;
+}
