--- a/src/app/main/config-sms-email/config-sms-email.component.scss
+++ b/src/app/main/config-sms-email/config-sms-email.component.scss
@@ -160,4 +160,18 @@ input[type="checkbox"] {
     height: 33px;
     margin-right: 87%;
 }
+
+:host ::ng-deep {
+  .p-treeselect, .p-dropdown {
+      border: 1px solid #106DB6;
+      border-radius: 5px;
+      height: 33px;
+      width: 100%;
+      outline: 0;
+      color: black !important;
+  }
+  .p-treeselect-label, .p-dropdown-label {
+      padding: 5px 5px 5px 15px;
+  }
+}
   
