--- a/src/app/main/config-sms-email/config-sms-email.component.scss
+++ b/src/app/main/config-sms-email/config-sms-email.component.scss
@@ -66,6 +66,8 @@ th:nth-child(3) {
     line-height: 16px;
     display: flex;
     align-items: center;
+    font-weight: bold; 
+    font-size: 15px;
     // text-transform: uppercase;
     // color: #106DB6;
 }
