fix giao dien quan ly thu muc

--- a/src/app/main/contract-folder/current-folder/current-folder.component.scss
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.scss
@@ -185,3 +185,26 @@
   .icon-button:hover {
     background-color: #0056b3;
   }
+  .icon{
+    display: flex; 
+    justify-content: start; 
+    margin-left: 40%;
+    
+    @media screen and (max-width: 1024px) {
+      display: flex; 
+      justify-content: start; 
+      margin-left: 31%;
+    }
+    
+    @media screen and (min-width: 1025px) and (max-width: 1280px) {
+      display: flex; 
+      justify-content: start; 
+      margin-left: 36%;
+    }
+    
+    @media screen and (min-width: 1281px) and (max-width: 1440px) {
+      display: flex; 
+      justify-content: start; 
+      margin-left: 38%;
+    }
+  }
