--- a/src/app/main/contract-folder/current-folder/current-folder.component.html
+++ b/src/app/main/contract-folder/current-folder/current-folder.component.html
@@ -74,7 +74,7 @@
 
                 <!--Cột 4: Thao tác-->
                 <div class="col-md-3 item_icon">
-                    <div style="display: flex; justify-content: center;">
+                    <div class="icon">
                         <div class="div_icon">
                             <img src="../../assets/img/icon_delete.svg" class="img_icon" (click)="deleteContract(item.id)" ngbTooltip="{{'contract.delete' | translate}}"/>
                         </div>
