--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -23,6 +23,11 @@
       ></p-dropdown>
       <!--<ngx-select [items]="optionsNetworkCompany" [placeholder]="{{'choose.network' | translate}}" [(ngModel)]="networkCompany" optionValueField="item_id" optionTextField="item_text"></ngx-select>-->
     </div>
+    
+    <div style="padding-top: 10px;" *ngIf="environment.flag == 'NB'">
+      <input type="checkbox" value="hidden_phone" [(ngModel)]="hidden_phone"/> 
+      <span style="margin-left: 2%; font-size: 17px;">{{'confirm.public.phone.pki' | translate}}</span>
+    </div>
 
     <div class="select-option">
       <button
@@ -34,6 +39,6 @@
         class="dx-button-form dx-button-submit dx-button-90" (click)="onSubmit()"
         type="default">{{'confirm' | translate}}
       </button>
-    </div>
+    </div>   
   </div>
 </div>
