--- a/src/app/main/unit/add-unit/add-unit.component.scss
+++ b/src/app/main/unit/add-unit/add-unit.component.scss
@@ -29,6 +29,12 @@
         padding: 5px 15px;
     }
 }  
+
+.icon-password{
+  left: 61%;
+  position: absolute;
+}
+
 .cancel-button{
     border: 0px;
     border-radius: 5px;
