tich hop api bao cao ekyc & api export

--- a/src/app/main/unit/add-unit/add-unit.component.html
+++ b/src/app/main/unit/add-unit/add-unit.component.html
@@ -118,7 +118,7 @@
         </div>
         
         <!--Hàng 5-->
-        <div class="row" style="padding-top: 10px; border: 1px solid gray; padding: 10px">
+        <!-- <div class="row" style="padding-top: 10px; border: 1px solid gray; padding: 10px">
             <div class="col-md-4">
                 <div class="label text-color">Brandname 
                   <span class="required-title">*</span>
@@ -130,15 +130,6 @@
                   <div *ngIf="f.brandName.errors.required">{{'error.unit.brandname.required' | translate}}</div>
                   <div *ngIf="f.brandName.errors.maxlength">{{'error.valid.brandname' | translate}}</div>
                 </div>
-                <!-- <div *ngIf="this.data.id==null">
-                    <p-dropdown panelStyleClass="font" appendTo="body" [options]="orgList" formControlName="parent_id" optionLabel="name" optionValue="id" placeholder="Chọn tổ chức" [filter]="true" filterBy="name" [showClear]="true" [showClear]="true" dropdownIcon="pi pi-chevron-down"></p-dropdown>
-                </div> -->
-                <!-- <div *ngIf="this.data.id != null" class="input-data hidden-color">
-                    <div class="hidden-color">{{parentName}}</div>
-                </div>
-                <div *ngIf="this.data.id == null && submitted && f.parent_id.errors" class="invalid">
-                    <div *ngIf="f.parent_id.errors.required">{{'error.unit.parent.required' | translate}}</div>
-                </div> -->
             </div>
 
             <div class="col-md-4">
@@ -172,7 +163,7 @@
               </div>
           </div>
           
-        </div>
+        </div> -->
 
 
 
