--- a/src/app/main/report/report-eKYC/report-eKYC.component.html
+++ b/src/app/main/report/report-eKYC/report-eKYC.component.html
@@ -46,7 +46,7 @@
     <p-table #dt [value]="list" [paginator]="true" [rows]="10" id="table" [autoLayout]="true">
 
       <!--header-->
-      <!-- <ng-template pTemplate="header">
+      <ng-template pTemplate="header">
         <tr>
           <th *ngFor="let col of cols" [style]='col.style' [colSpan]="col.colspan" [rowSpan]="col.rowspan">
             {{col.header | translate}}
@@ -57,19 +57,20 @@
       <ng-template pTemplate="body" let-list let-row="rowIndex">
         <tr>
           <ng-container *ngIf="row >= 0">
-            <td>{{list.contractUId}}</td>
-            <td>{{list.contractNum}}</td> 
+            <td>{{list.name}}</td>
+            <td>{{list.cardId}}</td> 
+            <td>{{this.convertTime(list.processAt)}}</td> 
             <td>{{list.contractName}}</td> 
-            <td>{{list.email}}</td> 
-            <td style="text-align: center; ">
-              <img ngbTooltip="{{'content' | translate}}" src="../../../assets/img/icon_file_sms.svg" width="20px"
-                (click)="contentEmail(list.id)" style="cursor: pointer;" />
-            </td>
-            <td>{{this.convertTime(list.createAt)}}</td> 
-            <td style="text-align: center;">{{list.contractStatus}}</td>
+            <td>{{list.contractNo}}</td> 
+            <td>{{list.contractCode}}</td>  
+            <td style="text-align: center;" *ngIf="list.status == 20">{{'contract.status.processing' | translate}}</td>
+            <td style="text-align: center;" *ngIf="list.status == 30">{{'contract.status.complete' | translate}}</td>
+            <td style="text-align: center;" *ngIf="list.status == 34">{{'contract.status.overdue' | translate}}</td>
+            <td style="text-align: center;" *ngIf="list.status == 31">{{'contract.status.fail' | translate}}</td>
+            <td style="text-align: center;" *ngIf="list.status == 32">{{'contract.status.cancel' | translate}}</td>
           </ng-container>
         </tr>
-      </ng-template> -->
+      </ng-template>
 
       <ng-template pTemplate="paginatorleft" let-state>
         <span style="color: white !important;">{{'chart.number' | translate}}: {{state.first <= 0 && state.totalRecords
