--- a/src/app/main/contract/contract.component.scss
+++ b/src/app/main/contract/contract.component.scss
@@ -16,6 +16,7 @@
   font-size: 16px;
   color: #106DB6;
   cursor: pointer;
+  white-space: pre-wrap;
 }
 
 
@@ -295,4 +296,8 @@
   background-color: #106DB6;
   font-size: 13px;
   margin: 0 10px;
+}
+
+#table td {
+  white-space: pre-wrap;
 }
