Update - HsmDialog] Thêm option chọn nhà cung cấp: mobifone/icorp

--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.scss
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.scss
@@ -85,3 +85,12 @@ input.pw {
   border-radius: 0 5px 5px 0;
 }
 
+::ng-deep {
+  .p-dropdown.p-component {
+    border: 1px solid #106DB6;
+    border-radius: 5px;
+    height: 33px;
+    display: flex;
+    align-items: center;
+  }
+}
