--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
@@ -4,6 +4,19 @@
   </div>
   <form [formGroup]="myForm" class="content">
       <div class="row">
+        <div class="col-md-12">
+          <div class="label text-color">{{'hsm.dialog.supplier' | translate}} <span class="required-title">*</span></div>
+          <p-dropdown
+            panelStyleClass="font"
+            [options]="suppliers"
+            formControlName="hsmSupplier"
+            optionLabel="name"
+            optionValue="id"
+            placeholder="{{'choose.network' | translate}}"
+          ></p-dropdown>
+        </div>
+      </div>
+      <div class="row">
           <div class="col-md-12">
               <div class="label text-color">{{'tax_code.cardId' | translate}} <span class="required-title">*</span></div>
               <div class="input-data">
