[Fix - ContractComponent] Fix hiển thị space ở đầu/cuối tên HĐ

--- a/src/app/main/contract/contract.component.html
+++ b/src/app/main/contract/contract.component.html
@@ -45,9 +45,7 @@
                                             'isOrg': this.isOrg,
                                             'organization_id': this.organization_id,
                                             'status': this.status
-                                          }">
-                                    {{item.name}}
-                                </a>
+                                          }">{{item.name}}</a>
                             </div>
 
                             <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
@@ -220,9 +218,7 @@
                                         'isOrg': this.isOrg,
                                         'organization_id': this.organization_id,
                                         'status': this.status
-                                      }">
-                                    {{item.name}}
-                                </a>
+                                      }">{{item.name}}</a>
                             </div>
 
                             <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
@@ -373,9 +369,7 @@
                                         'isOrg': this.isOrg,
                                         'organization_id': this.organization_id,
                                         'status': this.status
-                                      }">
-                                    {{item.name}}
-                                </a>
+                                      }">{{item.name}}</a>
                             </div>
 
                             <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
@@ -496,9 +490,7 @@
                                         'isOrg': this.isOrg,
                                         'organization_id': this.organization_id,
                                         'status': this.status
-                                      }">
-                                    {{item.name}}
-                                </a>
+                                      }">{{item.name}}</a>
                             </div>
 
                             <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
@@ -652,9 +644,7 @@
                                             'isOrg': this.isOrg,
                                             'organization_id': this.organization_id,
                                             'status': this.status
-                                          }">
-                                        {{item.name}}
-                                    </a>
+                                          }">{{item.name}}</a>
                                 </div>
 
                                 <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
@@ -811,9 +801,7 @@
                                             'isOrg': this.isOrg,
                                             'organization_id': this.organization_id,
                                             'status': this.status
-                                          }">
-                                        {{item.name}}
-                                    </a>
+                                          }">{{item.name}}</a>
                                 </div>
 
                                 <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
@@ -967,9 +955,7 @@
                                           'isOrg': this.isOrg,
                                           'organization_id': this.organization_id,
                                           'status': this.status
-                                        }">
-                                      {{item.name}}
-                                  </a>
+                                        }">{{item.name}}</a>
                               </div>
 
                               <div class="row" *ngFor="let itemPar of sortParticipant(item.participants); let index = index">
