[Fix - ReportEkyc] Sửa placeholder, columns name/style, trim search param

--- a/src/app/main/report/report-eKYC/report-eKYC.component.html
+++ b/src/app/main/report/report-eKYC/report-eKYC.component.html
@@ -24,10 +24,10 @@
     </div>
 
     <!-- Thông tin hợp đồng -->
-    <div class="col-md-2">
+    <div class="col-md-3">
       <div>{{'contract.information' | translate}}</div>
       <div class="input-line">
-        <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Mã HĐ, Số HĐ, Tên HĐ" />
+        <input type="text" [(ngModel)]="contractInfo" class="input_text" placeholder="Tìm kiếm theo Họ tên, CMT/CCCD, Tên HĐ, Mã HĐ, Số HĐ" />
       </div>
     </div>
 
