--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -80,20 +80,20 @@
               <div class="input-data">
                 <input type="text" formControlName="brandName" placeholder="Nhập Brandname">
               </div>
-              <div *ngIf="submitted && f.brandName.errors" class="invalid">
+              <div *ngIf="f.brandName.errors" class="invalid">
                 <div *ngIf="f.brandName.errors.required">{{'error.unit.brandname.required' | translate}}</div>
-                <div *ngIf="f.brandName.errors.maxlength">{{'error.valid.brandname' | translate}}</div>
+                <!-- <div *ngIf="f.brandName.errors.maxlength">{{'error.valid.brandname' | translate}}</div> -->
               </div>
             </div>
 
             <div class="col-md-3">
-              <div>{{'contract.status' | translate}}
+              <div>{{'hsm.dialog.supplier' | translate}}
                 <span class="required-title">*</span>
               </div>
               <div class="input-line">
                 <p-dropdown panelStyleClass="font" appendTo="body" optionLabel="name" optionValue="id"
-                  placeholder="{{'all' | translate}}" [showClear]="true" [options]="optionsSupplier"
-                  [(ngModel)]="contractSupplier" [autoDisplayFirst]="false"></p-dropdown>
+                  [showClear]="true" [options]="optionsSupplier"
+                  formControlName="contractSupplier" [autoDisplayFirst]="false"></p-dropdown>
               </div>
             </div>
 
@@ -104,7 +104,7 @@
               <div class="input-data">
                 <input type="text" formControlName="smsUser" [disabled]="false">
               </div>
-              <div *ngIf="submitted && f.smsUser.errors" class="invalid">
+              <div *ngIf="f.smsUser.errors" class="invalid">
                 <div *ngIf="f.smsUser.errors.required">{{'error.unit.username.required' | translate}}</div>
                 <div *ngIf="f.smsUser.errors.maxlength">{{'error.valid.username' | translate}}</div>
               </div>
@@ -124,7 +124,7 @@
                   }" (click)="toggleFieldTextType()" style="color: #106db6"></i>
                 </div>
               </div>
-              <div *ngIf="submitted && f.smsPass.errors" class="invalid">
+              <div *ngIf="f.smsPass.errors" class="invalid">
                 <div *ngIf="f.smsPass.errors.required">{{'error.unit.password.required' | translate}}</div>
                 <div *ngIf="f.smsPass.errors.maxlength">{{'error.valid.password' | translate}}</div>
               </div>
@@ -132,7 +132,7 @@
           </div>
         </form>
         <div style="justify-content: center;padding-top: 20px; margin-left: 94%; margin-bottom: 20px;">
-          <button class="save-button" (click)="configBrandname()">{{'btn.save' | translate}}</button>
+          <button class="save-button" [disabled]="isDisable" (click)="configBrandname()">{{'btn.save' | translate}}</button>
         </div>
       </div>
     </div>
