--- a/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/infor-coordination/infor-coordination.component.html
@@ -75,7 +75,7 @@
                [ngClass]="changeColorDrag(null, true)"
                [ngStyle]="changePosition(d)">
             <div *ngIf="d.name" class="name-sig-img-daky long-text-ellipsis">{{(d.name && !d.value) ? d.name : ''}}</div>
-            <app-image-sign-contract *ngIf="!view" [datas]="datas" [view]="true" [sign]="d"></app-image-sign-contract>
+            <app-image-sign-contract [ngClass]="(d.sign_unit == 'chu_ky_so' || d.sign_unit == 'chu_ky_anh') ? 'main-sign-box': ''" *ngIf="!view" [datas]="datas" [view]="true" [sign]="d"></app-image-sign-contract>
           </div>
         </div>
       </div>
