--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -1,3 +1,5 @@
+<!-- Màn điều phối hđ -->
+
 <!--<link rel="stylesheet" href="sample-contract.component.scss">-->
 <div class="sample-contract row">
     <!--  information contract-->
@@ -98,7 +100,7 @@
                         <!-- <img src="assets/img/clear.svg" alt=""> -->
                         <img src="assets/img/border-clear.svg" alt="">
                     </div>
-                    <app-sign-contract [datas]="datas" [sign]="d"></app-sign-contract>
+                    <app-sign-contract class="main-sign-box" [datas]="datas" [sign]="d"></app-sign-contract>
                 </div>
             </div>
         </div>
