--- a/src/app/main/contract-signature/components/contract-coordination/shared/sign-sample-contract/sign-contract/sign-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/sign-sample-contract/sign-contract/sign-contract.component.html
@@ -1,12 +1,28 @@
-<div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
-  <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract">
-  <!-- <span style="color: #106DB6; font-size: 11px">{{sign.sign_unit == 'chu_ky_anh' ? 'Chữ ký ảnh' : 'Chữ ký số'}}</span> -->
+<!-- Màn điều phối HĐ -->
+
+<!-- <div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
+  <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/img_drag.svg' : 'assets/img/img_sign_number.svg'" alt="mobifone.contract111">
   <span style="color: #106DB6; font-size: 11px" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
   <ng-template #content>{{'sign.image.ekyc' |translate}}</ng-template>
   <ng-template #other_content>{{'sign.digital'|translate}}</ng-template>
 </div>
 
 <div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
-<!--  <input id="input-text" type="text" [placeholder]="sign.sign_unit == 'text' ? 'Nhập text' : 'Nhập số tài liệu'">-->
+  <span style="font-size: 11px" id="input-text">{{sign.sign_unit == 'text' ? 'Text' : 'Số hợp đồng'}}</span>
+</div> -->
+
+<div *ngIf="sign.sign_unit == 'chu_ky_so' || sign.sign_unit == 'chu_ky_anh'" class="content">
+  <div class="stamp-content">
+    <img [src]="sign.sign_unit == 'chu_ky_anh' ? 'assets/img/new-icon-chu-ky-so.svg' : 'assets/img/new-icon-chu-ky-so.svg'"
+      alt="mobifone.contract">
+  </div>
+  <div class="sign-info-content">
+    <span style="color: #106DB6;" *ngIf="sign.sign_unit == 'chu_ky_anh'; then content else other_content"></span>
+    <ng-template #content>Thông tin chữ ký ảnh</ng-template>
+    <ng-template #other_content>Thông tin chữ ký số</ng-template>
+  </div>
+</div>
+
+<div class="text-sign" *ngIf="sign.sign_unit == 'text' || sign.sign_unit == 'so_tai_lieu'">
   <span style="font-size: 11px" id="input-text">{{sign.sign_unit == 'text' ? 'Text' : 'Số hợp đồng'}}</span>
 </div>
