--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/sample-contract/sample-contract.component.html
@@ -103,6 +103,17 @@
                     <app-sign-contract class="main-sign-box" [datas]="datas" [sign]="d"></app-sign-contract>
                 </div>
             </div>
+
+            <div *ngFor="let d2 of this.getCurrentSignConfigs()" class="show-list-name-drag" [style.width]="this.canvasWidth">
+                <div class="resize-drag" [id]="d2.id" style="z-index: -1; pointer-events: none;" #itemElement [ngClass]="changeColorDrag(null,true)" [ngStyle]="changePosition(d2)">
+                    <div *ngIf="d2.name" class="name-sig-img-daky long-text-ellipsis">{{d2.name ? d2.name : ''}}</div>
+                    <div class="sig-img-daky">
+                        <!-- <img src="assets/img/clear.svg" alt=""> -->
+                        <!-- <img src="assets/img/border-clear.svg" alt=""> -->
+                    </div>
+                    <app-sign-contract class="main-sign-box" [datas]="datas" [sign]="d2"></app-sign-contract>
+                </div>
+            </div>
         </div>
     </div>
 </div>
