[Update - HsmDialogSign] Thêm padding

--- a/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/hsm-dialog-sign/hsm-dialog-sign.component.html
@@ -16,7 +16,7 @@
           ></p-dropdown>
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="padding-top: 10px;">
           <div class="col-md-12">
               <div class="label text-color">{{'tax_code.cardId' | translate}} <span class="required-title">*</span></div>
               <div class="input-data">
