Chinh sua giao dien & Tich hop bo sung cau hinh Brandname

--- a/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.scss
+++ b/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.scss
@@ -36,16 +36,17 @@ textarea {
   }
 }
 
-.check-button{
+.disable-button{
   border: 0px;
   border-radius: 5px;
   height: 33px;
   width: 100px;
   box-sizing: border-box;
   color: white;
-  background-color: #8B8B8B;
+  background-color: #8E9AB0;
   font-size: 13px;
   margin: 0 10px;
+  cursor: not-allowed;
 }
 .save-button{
   border: 0px;
