--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -39,7 +39,7 @@
 
       <div>
         <div style="justify-content: center;padding-top: 20px; margin-left: 95%;">
-          <button class="save-button" (click)="updateSmsEmail()">{{'btn.save' | translate}}</button>
+          <button [class]="isDisableConfigSmsEmail? 'disable-button' : 'save-button'" [disabled]="isDisableConfigSmsEmail" (click)="updateSmsEmail()">{{'btn.save' | translate}}</button>
         </div>
       </div>
     </div>
@@ -47,25 +47,26 @@
 
   <!--Lệnh if để ẩn-->
   <div class="row" style="padding-top: 20px; flex-wrap: nowrap;">
-    <div class="col-md-2" style="border: 1px solid gray; border-radius: 8px; margin-left: 1%;">
-      <div *ngIf="isRoleConfigExpirationDay" style="margin-top: 20px; margin-left: 5%;">
+    <div class="col-md-2" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 1%;">
+      <div *ngIf="isRoleConfigExpirationDay" style="margin-top: 20px;">
         <div class="sms-header">
           {{'config.day.expiration' | translate}}
         </div>
         <!-- Cấu hình ngày sắp hết hạn -->
         <div class="border-table-email" style="text-align: center;">
           <div style="justify-content: center; padding-top: 20px; ">
-            <input [(ngModel)]="this.soonExpireDay" type="number" class="input-expiration-date" min="0" oninput="this.value = 
-                        !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" />
+            <input [(ngModel)]="this.soonExpireDay" type="number" class="input-expiration-date" min="0" 
+            oninput="this.value = !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null"
+            (ngModelChange)="onSoonExpireDayChange($event)" />
           </div>
         </div>
-        <div style="justify-content: center;padding-top: 20px; margin-left: 25%; margin-bottom: 20px;">
-          <button class="save-button" (click)="updateSoonExpireDay()">{{'btn.save' | translate}}</button>
+        <div style="justify-content: center;padding-top: 20px; text-align: center; margin-bottom: 20px;">
+          <button [class]="isDisableSoonExpireDay? 'disable-button' : 'save-button'" [disabled]="isDisableSoonExpireDay" (click)="updateSoonExpireDay()">{{'btn.save' | translate}}</button>
         </div>
       </div>
     </div>
 
-    <div class="col-md-9" style="border: 1px solid gray; border-radius: 8px; margin-left: 6%;">
+    <div class="col-md-9" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 6%;">
       <div style="margin-top: 20px;">
         <div class="sms-header">
           {{'config.brandname' | translate}}
@@ -81,8 +82,8 @@
                 <input type="text" formControlName="brandName" placeholder="Nhập Brandname">
               </div>
               <div *ngIf="f.brandName.errors" class="invalid">
-                <div *ngIf="f.brandName.errors.required">{{'error.unit.brandname.required' | translate}}</div>
-                <!-- <div *ngIf="f.brandName.errors.maxlength">{{'error.valid.brandname' | translate}}</div> -->
+                <div *ngIf="f.brandName?.errors?.required">{{'error.unit.brandname.required' | translate}}</div>
+                <div *ngIf="f.brandName?.errors?.pattern">{{'validate.regex.brandname' | translate}}</div>
               </div>
             </div>
 
@@ -98,41 +99,41 @@
             </div>
 
             <div class="col-md-3">
-              <div class="label text-color">Username
+              <div class="label text-color">{{'username' | translate}}
                 <span class="required-title">*</span>
               </div>
               <div class="input-data">
-                <input type="text" formControlName="smsUser" [disabled]="false">
+                <input type="text" formControlName="smsUser" maxlength = '100' style="width: 100%;">
               </div>
-              <div *ngIf="f.smsUser.errors" class="invalid">
-                <div *ngIf="f.smsUser.errors.required">{{'error.unit.username.required' | translate}}</div>
-                <div *ngIf="f.smsUser.errors.maxlength">{{'error.valid.username' | translate}}</div>
+              <div *ngIf="f.smsUser?.errors" class="invalid">
+                <div *ngIf="f.smsUser?.errors?.required">{{'error.unit.username.required' | translate}}</div>
+                <!-- <div *ngIf="f.smsUser.errors.maxlength">{{'error.valid.username' | translate}}</div> -->
               </div>
             </div>
 
             <div class="col-md-3">
-              <div class="label text-color">Passwword
+              <div class="label text-color">{{'login.password' | translate}}
                 <span class="required-title">*</span>
               </div>
               <div class="input-data">
                 <input type="text" formControlName="smsPass" [type]="fieldTextType ? 'text' : 'password'"
-                  [disabled]="false">
+                 maxlength = '100' style="width: 100%;">
                 <div class="icon-password">
                   <i class="fa" [ngClass]="{
                     'fa-eye-slash': !fieldTextType,
                     'fa-eye': fieldTextType
-                  }" (click)="toggleFieldTextType()" style="color: #106db6"></i>
+                  }" (click)="toggleFieldTextType()" style="color: #106db6; float: right;"></i>
                 </div>
               </div>
-              <div *ngIf="f.smsPass.errors" class="invalid">
-                <div *ngIf="f.smsPass.errors.required">{{'error.unit.password.required' | translate}}</div>
-                <div *ngIf="f.smsPass.errors.maxlength">{{'error.valid.password' | translate}}</div>
+              <div *ngIf="f.smsPass?.errors" class="invalid">
+                <div *ngIf="f.smsPass?.errors?.required">{{'error.unit.password.required' | translate}}</div>
+                <!-- <div *ngIf="f.smsPass.errors.maxlength">{{'error.valid.password' | translate}}</div> -->
               </div>
             </div>
           </div>
         </form>
         <div style="justify-content: center;padding-top: 20px; margin-left: 94%; margin-bottom: 20px;">
-          <button class="save-button" [disabled]="isDisable" (click)="configBrandname()">{{'btn.save' | translate}}</button>
+          <button [class]="isDisable? 'disable-button' : 'save-button'" [disabled]="isDisable" (click)="configBrandname()" >{{'btn.save' | translate}}</button>
         </div>
       </div>
     </div>
