--- a/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.html
+++ b/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.html
@@ -7,27 +7,27 @@
   <div class="row">
     <form [formGroup]="checkBrandnameForm" class="content">
       <div>
-        <div class="label text-color">Số điện thoại
+        <div class="label text-color">{{'user.phone' | translate}}
           <span class="required-title">*</span>
         </div>
         <div class="input-data">
-          <input type="text" formControlName="phone" [disabled]="false" placeholder="Nhập số điện thoại">
+          <input type="text" formControlName="phone" placeholder="Nhập số điện thoại" (keyup)="validPhoneNumber()">
         </div>
-        <div *ngIf="submitted && f.smsUser?.errors?.required" class="invalid">
-          <div *ngIf="f.smsUser?.errors?.required">{{'error.unit.username.required' | translate}}</div>
-          <!-- <div *ngIf="f.smsUser?.errors?.maxlength">{{'error.valid.username' | translate}}</div> -->
+        <div *ngIf="f.phone?.errors" class="invalid">
+          <div *ngIf="f.phone?.errors?.required">{{'error.user.phone.required' | translate}}</div>
+          <div *ngIf="f.phone?.errors?.pattern">{{'validate.regex.phone' | translate}}</div>
         </div>
       </div>
       
       <div style="padding-top: 20px;">
-        <div class="label text-color">Nội dung SMS
+        <div class="label text-color">{{'content.sms.brand' | translate}}
           <span class="required-title">*</span>
         </div>
-        <textarea formControlName="message" [disabled]="true" style="width: 100%; height: 120px;"></textarea>
+        <textarea formControlName="message" style="width: 100%; height: 120px; background-color: #F7F7F7;"></textarea>
       </div>
     </form>
   </div>
   <div style="text-align: center; padding-top: 10px;">
-    <button class="check-button" (click)="onCheck()" type="button">{{'check.button' | translate}}</button>
+    <button [class]="isDisable? 'disable-button' : 'save-button'" [disabled]="isDisable" (click)="onCheck()" type="button">{{'check.button' | translate}}</button>
   </div>
 </div>
