--- a/src/app/main/config-sms-email/config-sms-email.component.scss
+++ b/src/app/main/config-sms-email/config-sms-email.component.scss
@@ -138,6 +138,18 @@ th:nth-child(3) {
     // margin: 0 10px;
 }
 
+.disable-button{
+  border: 0px;
+  border-radius: 5px;
+  height: 30px;
+  width: 80px;
+  box-sizing: border-box;
+  color: white;
+  background-color: #8E9AB0;
+  font-size: 13px;
+  cursor: not-allowed;
+}
+
 input[type="checkbox"] {
     box-sizing: border-box;
     background: #FFFFFF;
@@ -160,7 +172,7 @@ input[type="checkbox"] {
     border-radius: 5px;
     width: 229px;
     height: 33px;
-    margin-right: 87%;
+    // margin-right: 87%;
     text-align: center;
 }
 
@@ -183,12 +195,13 @@ input[type="checkbox"] {
   min-height: 33px;
   display: flex;
   align-items: center;
+  position: relative;
 
   > input, div {
       border: none;
       outline: none;
       padding-left: 15px;
-      width: 100%;
+      right: 0;
       border-radius: 5px;
   }
   > div{
@@ -199,7 +212,7 @@ input[type="checkbox"] {
   color: red;
 }
 .icon-password{
-  left: 96%;
+  top: 5px;
   position: absolute;
 }
 
