chinh sua lai giao dien cau hinh brandname theo nghiep vu moi & bo sung kiem tra thong tin to chuc cua ng trong luong ky To chuc cua toi

--- a/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.html
+++ b/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="header">
     <h3 style="text-align: center;" class="label-header">{{this.data.title | translate}}</h3>
-    <span style="text-align: center; color: #8E9AB0;">Vui lòng kiểm tra kết nối trước khi thực hiện lưu cấu hình</span>
+    <span style="text-align: center; color: #8E9AB0;">{{'check.config.brandname' | translate}}</span>
   </div>
 
   <div class="row">
