--- a/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.scss
+++ b/src/app/main/config-sms-email/config-check-brandname-dialog/config-check-brandname-dialog.component.scss
@@ -1,11 +1,16 @@
 .header{
   text-align: center; 
-  font-weight: bold
+  
 }
 .label-header{
   // color: #106DB6; 
   font-family: inherit; 
+  font-weight: bold;
   // text-transform: uppercase;
+}
+
+.text-color{
+  font-weight: bold;
 }
 
 textarea {
