--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -94,7 +94,10 @@
               <div class="input-line">
                 <p-dropdown panelStyleClass="font" appendTo="body" optionLabel="name" optionValue="id"
                   [showClear]="true" [options]="optionsSupplier"
-                  formControlName="contractSupplier" [autoDisplayFirst]="false"></p-dropdown>
+                  formControlName="contractSupplier" [autoDisplayFirst]="false" placeholder="{{'enter.supplier' | translate}}"></p-dropdown>
+              </div>
+              <div *ngIf="f.contractSupplier?.errors" class="invalid">
+                <div *ngIf="f.contractSupplier?.errors?.required">{{'error.supplier.required' | translate}}</div>
               </div>
             </div>
 
@@ -103,11 +106,10 @@
                 <span class="required-title">*</span>
               </div>
               <div class="input-data">
-                <input type="text" formControlName="smsUser" maxlength = '100' style="width: 90%;">
+                <input type="text" formControlName="smsUser" maxlength = '100' style="width: 100%;" placeholder="{{'username.enter' | translate}}">
               </div>
               <div *ngIf="f.smsUser?.errors" class="invalid">
                 <div *ngIf="f.smsUser?.errors?.required">{{'error.unit.username.required' | translate}}</div>
-                <!-- <div *ngIf="f.smsUser.errors.maxlength">{{'error.valid.username' | translate}}</div> -->
               </div>
             </div>
 
@@ -117,7 +119,7 @@
               </div>
               <div class="input-data">
                 <input type="text" formControlName="smsPass" [type]="fieldTextType ? 'text' : 'password'"
-                 maxlength = '100' style="width: 90%;">
+                 maxlength = '100' style="width: 90%;" placeholder="{{'password.enter' | translate}}">
                 <div class="icon-password">
                   <i class="fa" [ngClass]="{
                     'fa-eye-slash': !fieldTextType,
@@ -127,7 +129,6 @@
               </div>
               <div *ngIf="f.smsPass?.errors" class="invalid">
                 <div *ngIf="f.smsPass?.errors?.required">{{'error.unit.password.required' | translate}}</div>
-                <!-- <div *ngIf="f.smsPass.errors.maxlength">{{'error.valid.password' | translate}}</div> -->
               </div>
             </div>
           </div>
