--- a/src/app/main/config-sms-email/config-sms-email.component.html
+++ b/src/app/main/config-sms-email/config-sms-email.component.html
@@ -47,8 +47,8 @@
 
   <!--Lệnh if để ẩn-->
   <div class="row" style="padding-top: 20px; flex-wrap: nowrap;">
-    <div class="col-md-2" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 1%;">
-      <div *ngIf="isRoleConfigExpirationDay" style="margin-top: 20px;">
+    <div *ngIf="isRoleConfigExpirationDay" class="col-md-2" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 1%;">
+      <div style="margin-top: 20px;">
         <div class="sms-header">
           {{'config.day.expiration' | translate}}
         </div>
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <div class="col-md-9" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 6%;">
+    <div *ngIf="isRoleConfigBrandname" class="col-md-9" style="border: 1px solid #e6e7ec; border-radius: 8px; margin-left: 6%;">
       <div style="margin-top: 20px;">
         <div class="sms-header">
           {{'config.brandname' | translate}}
@@ -79,7 +79,7 @@
                 <span class="required-title">*</span>
               </div>
               <div class="input-data">
-                <input style="width: 100%;" type="text" formControlName="brandName" placeholder="Nhập Brandname">
+                <input style="width: 100%;" type="text" formControlName="brandName" placeholder="Nhập Brandname" (keyup)="onChangeBrandname()">
               </div>
               <div *ngIf="f.brandName.errors" class="invalid">
                 <div *ngIf="f.brandName?.errors?.required">{{'error.unit.brandname.required' | translate}}</div>
@@ -94,7 +94,7 @@
               <div class="input-line">
                 <p-dropdown panelStyleClass="font" appendTo="body" optionLabel="name" optionValue="id"
                   [showClear]="true" [options]="optionsSupplier"
-                  formControlName="contractSupplier" [autoDisplayFirst]="false" placeholder="{{'enter.supplier' | translate}}"></p-dropdown>
+                  formControlName="contractSupplier" [autoDisplayFirst]="false" placeholder="{{'enter.supplier' | translate}}" (onChange)="onChangeSupplier()"></p-dropdown>
               </div>
               <div *ngIf="f.contractSupplier?.errors" class="invalid">
                 <div *ngIf="f.contractSupplier?.errors?.required">{{'error.supplier.required' | translate}}</div>
