Chỉnh lại css cho title xác nhận hiển thị chữ ký pki

--- a/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
+++ b/src/app/main/contract-signature/components/consider-contract/pki-dialog-sign/pki-dialog-sign.component.html
@@ -24,9 +24,9 @@
       <!--<ngx-select [items]="optionsNetworkCompany" [placeholder]="{{'choose.network' | translate}}" [(ngModel)]="networkCompany" optionValueField="item_id" optionTextField="item_text"></ngx-select>-->
     </div>
     
-    <div style="padding-top: 10px;" *ngIf="environment.flag == 'NB'">
+    <div style="padding-top: 10px;">
       <input type="checkbox" value="hidden_phone" [(ngModel)]="hidden_phone"/> 
-      <span style="margin-left: 2%; font-size: 17px;">{{'confirm.public.phone.pki' | translate}}</span>
+      <span style="margin-left: 2%; font-size: 14px;">{{'confirm.public.phone.pki' | translate}}</span>
     </div>
 
     <div class="select-option">
