--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<div id="all" *ngIf="this.mobile == false" class="all">
+<div id="all" *ngIf="this.mobile == false && !isSSOlogin" class="all">
 
   <div class="full-height d-flex flex-row">
     <div class="left-background"></div>
@@ -96,11 +96,11 @@
                 </div>
               </div>
 
-              <div *ngIf="this.type != 1" class="form-group forgot-password">
-                <a href="/forgot-password"
+              <!-- <div *ngIf="this.type != 1" class="form-group forgot-password">
+                <a href="/forgot-password" 
                   >{{ "login.forgot_password" | translate }}?</a
                 >
-              </div>
+              </div> -->
 
               <div class="form-group">
                 <p class="alert alert-danger" role="alert" *ngIf="error" style="text-align: center">
@@ -111,6 +111,12 @@
               <div class="form-group sub-login">
                 <button class="btn btn-lg btn-block" (click)="loginUser()">
                   {{ "login" | translate }}
+                </button>
+              </div>
+
+              <div class="form-group sub-login">
+                <button class="btn btn-lg btn-block" style="background-color: #ed1c24;" (click)="loginSSO()">
+                  {{ "Đăng nhập SSO" | translate }}
                 </button>
               </div>
 
@@ -132,7 +138,7 @@
   </div>
 </div>
 
-<div *ngIf="this.mobile == true" class="all">
+<div *ngIf="this.mobile == true && !isSSOlogin" class="all">
   <div>
     <div class="left-background-mobile"></div>
     <div class="right-panel-mobile">
@@ -256,4 +262,12 @@
       </div>
     </div>
   </div>
+</div>
+ 
+<div *ngIf="isSSOlogin">
+  <h2>Đang tải dữ liệu...</h2>
+  <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-spin-clockwise">
+    <p style="font-size: 18px; color: white">{{'Đang tải dữ liệu' | translate}}...</p>
+  </ngx-spinner>
+  <html><body><script>parent.postMessage(location.href, location.origin)</script></body></html>
 </div>
